<resources>
    <string name="app_name">FirebaseChatApp</string>

    <string name="action_settings">Settings</string>
    <string name="header_text">This is Header</string>

    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string name="login">Login</string>
    <string name="wishlist">Wishlist</string>
    <string name="track">Track Order</string>
    <string name="invite">Invite and Earn</string>
    <string name="rate">Rate the App</string>
    <string name="help">Help Centre</string>
    <string name="legal">Legal</string>
    <string name="returns">Returns Policy</string>
    <string name="privacy">Privacy Policy</string>

    <string name="mobile">Mobiles</string>
    <string name="tv">Televisions</string>
    <string name="televisions">Televisions</string>
    <string name="large_appliances">Large Appliances</string>
    <string name="refrigrators">Refrigrators</string>
    <string name="air_conditioners">Air Conditioners</string>
    <string name="title_activity_data_binding">DataBindingActivity</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="discover_peers">Discover Peers</string>
    <string name="enable_wifi">Enable WiFi</string>
    <string name="network_disable_msg">Please check your internet connection!</string>

    <!--Certificate fingerprints:-->
    <string name="md5">08:32:93:9B:64:EF:96:6D:13:04:73:E0:45:CA:E4:AB</string>
    <string name="sha1">7C:F3:F5:CA:45:90:71:3C:57:18:CF:21:DC:36:C1:23:ED:6A:8E:7F</string>
    <string name="sha256">7D:90:F3:69:C8:42:06:EF:B5:57:D6:3B:19:E3:81:76:5F:D4:99:DD:4D:6A:96:CA:16:AD:33:5B:04:E5:37:42</string>

    <!-- Facebook credentials and string values-->
    <string name="facebook_app_id">1610139385944971</string>
    <string name="facebook_app_keyhash">ga0RGNYHvNM5d0SLGQfpQWAPGJ8=</string>
    <string name="update_status">Update Status</string>
    <string name="post_image">Post Image</string>
    // if your App ID is 1234567, you should use fb1234567
    <string name="fb_login_protocol_scheme">fb1610139385944971</string>
    <string name="share_multimedia">Share Multimedia</string>
    <string name="share_link">Share Link</string>
    <string name="share_photo">Share Photo</string>
    <string name="share_video">Share Video</string>
    <string name="facebook_uploading">Facebook Uploading</string>
    <string name="facebook_successful">Facebook Successful</string>

    <!-- Gmail credentials and string values-->
    <string name="gmail_o_auth">543172537645-odj4e95ks9iu9is2f6ffbr1l60si2oso.apps.googleusercontent.com</string>
    <string name="signed_in_fmt">Signed in</string>
    <string name="signed_out">Signed Out</string>

    <!-- Insta credentials and string values-->
    <string name="insta_client_id">d7006f12eb434054be395939cdd2bfde</string>
    <string name="insta_client_secret">6af14bdbe25442829c683207cfaf3027</string>

    <!-- Twitter credentials and string values-->
</resources>
